--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 ansible_python_interpreter = python3
 inventory = hosts
+remote_user = root
 
 [ssh_connection]
 # -C -o ControlMaster=auto -o ControlPersits=60s are default options and need to be repeated
