Build map style using Ansible as user osmimport

--- a/ansible/roles/tileserver/tasks/main.yml
+++ b/ansible/roles/tileserver/tasks/main.yml
@@ -173,12 +173,13 @@
 - name: Create directory for CartoCSS map style repository
   file:
     path: '{{ cartocss_dir }}'
-    owner: root
-    group: root
+    owner: osmimport
+    group: osmimport
     state: directory
     mode: '0755'
 
 - name: Clone CartoCSS map style repository
+  become_user: osmimport
   git:
     dest: '{{ cartocss_dir }}'
     repo: https://github.com/OpenRailwayMap/OpenRailwayMap-CartoCSS.git
