Use a shared role for frequently used handlers

--- a/ansible/roles/mail/handlers/main.yml
+++ b/ansible/roles/mail/handlers/main.yml
@@ -1,52 +1,41 @@
 # SPDX-License-Identifier: MIT
-- name: systemctl daemon-reload
-  systemd:
-    daemon_reload: yes
-- name: systemctl reload apache2
+- name: 'systemd reload postgresql'
   systemd:
     name: apache2
     state: reloaded
-- name: systemctl reload postgresql
-  systemd:
-    name: apache2
-    state: reloaded
-- name: systemctl restart apache2
-  systemd:
-    name: apache2
-    state: restarted
-- name: systemctl reload postfix
+- name: 'systemd reload postfix'
   systemd:
     name: postfix
     state: reloaded
-- name: systemctl restart postfix
+- name: 'systemd restart postfix'
   systemd:
     name: postfix
     state: restarted
-- name: systemctl restart postgrey
+- name: 'systemd restart postgrey'
   systemd:
     name: postgrey
     state: restarted
-- name: systemctl restart mailman
+- name: 'systemd restart mailman'
   systemd:
     name: mailman
     state: restarted
-- name: systemctl restart mailman3
+- name: 'systemd restart mailman3'
   systemd:
     name: mailman3
     state: restarted
-- name: systemctl restart mailman3-web
+- name: 'systemd restart mailman3-web'
   systemd:
     name: mailman3-web
     state: restarted
-- name: systemctl restart amavis
+- name: 'systemd restart amavis'
   systemd:
     name: amavis
     state: restarted
-- name: systemctl restart amavisd-milter
+- name: 'systemd restart amavisd-milter'
   systemd:
     name: amavisd-milter
     state: restarted
-- name: systemctl restart opendkim
+- name: 'systemd restart opendkim'
   systemd:
     name: opendkim
     state: restarted
