--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -46,6 +46,7 @@ PYOSMIUM_UP_TO_DATE=pyosmium-up-to-date
 OSMIUM=osmium
 OSM2PGSQL=osm2pgsql
 MERGE_TILES=/opt/OpenRailwayMap-server-config/scripts/merge_tiles_to_metatiles.py
+EXPIRE_TILES=/opt/OpenRailwayMap-server-config/scripts/expire-tiles.py
 
 # Enable/Disable Steps
 # --------------------
@@ -79,9 +80,8 @@ OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
 # Number of processes for Osm2pgsql for update
 OSM2PGSQL_NUMBER_PROCESSES=2
 # Zoom levels to expire tiles at
-EXPIRE_TILES_ZOOM=12-19
-# Path for tile expiry output file for Osm2pgsql
-EXPIRE_OUTPUT=/nvme/data/tileupdate/expiry.log
+EXPIRE_TILES_MINZOOM=12
+EXPIRE_TILES_MAXZOOM=19
 # Metatile directory
 METATILE_ROOT_DIR=/var/lib/tirex/tiles/
 # Map names used by Tirex. They must match the subdirectories of $METATILE_ROOT_DIR. If you use
