Send black tiles to railon.vonatDroid
The app was blocked on 2021-01-13 by commit
9038097993e60ef7e650a970f67c58e976178bc1 due to high usage (and it did not
attribute OSM). It has received status code 403 since then.
However, the number of requests did not go down. It still makes about
10% of all tile requests. A black tile will hide the base map and
hopefully make the developer to remove OpenRailwayMap from their app.

--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -180,6 +180,22 @@
   when: "'letsencrypt' in group_names"
   include_tasks: '../../../includes/redirect-and-acme-challenge-includes.yml'
 
+- name: Create directory for error tiles
+  file:
+    path: /var/www/tile-util
+    owner: root
+    group: root
+    mode: 0755
+    state: directory
+
+- name: Copy error tile to /var/www/tile-util
+  copy:
+    src: black.png
+    dest: /var/www/tile-util/black.png
+    owner: root
+    group: root
+    mode: 0644
+
 - name: Add tileserver configuration for Apache virtualhost
   template:
     src: '{{ item }}'
